# mcpower-proxy

./: .gitignore  LICENSE  README.md  pyproject.toml  server.json  test-build-locally.sh
.github/: secret_scanning.yml
.github/workflows/: build.yml  publish.yml
src/: README.md  main.py  requirements.txt
src/ide_tools/claude_code/: __init__.py  format.py  hooks_definition.py  router.py
src/ide_tools/claude_code/tests/: __init__.py  common.py  test_e2e_pre_tool_use_bash.py  test_e2e_pre_tool_use_grep.py  test_e2e_pre_tool_use_read.py  test_e2e_session_start.py  test_e2e_user_prompt_submit.py
src/ide_tools/common/hooks/: init.py  mcp_execution.py  prompt_submit.py  read_file.py  shell_execution.py  types.py  utils.py
src/ide_tools/common/tests/: __init__.py  asserts.py  (+2 more)
src/ide_tools/cursor/: constants.py  router.py
src/modules/: decision_handler.py
src/modules/apis/: security_policy.py
src/modules/logs/: audit_trail.py  logger.py
src/modules/redaction/: gitleaks_rules.py  pii_rules.py  redactor.py
src/modules/ui/: __init__.py  confirmation.py  simple_dialog.py
src/modules/utils/: cli.py  config.py  ids.py  json.py
src/tests/: __init__.py  test_e2e_echo.py  test_e2e_echo_base.py  test_e2e_echo_executable.py
src/wrapper/: __version__.py  middleware.py  server.py
src/wrapper/tests/: __init__.py  test_e2e_echo.py  test_e2e_echo_base.py
targets/: .gitignore  .prettierrc  jest.config.js  package-lock.json  package.json  tsconfig.base.json
targets/common-ts/: jest.config.js  package-lock.json  package.json  tsconfig.json  types.ts
targets/common-ts/utils/: index.ts
targets/common-ts/watcher/: index.test.ts  index.ts
targets/scripts/: clean-build.js  setup-uvx-linux.sh  setup-uvx-macos.sh  setup-uvx-windows.ps1  update-gitleaks-rules.mjs
targets/vsc-extension/: .gitignore  .vscodeignore  LICENSE  README.md  jest.config.js  package-lock.json  package.json  tsconfig.json  webpack.config.js
targets/vsc-extension/__mocks__/: vscode.js
targets/vsc-extension/scripts/: bundle-executables.js  clean-build.js  copy-proxy.js  setup-build-env-linux.sh  setup-build-env-macos.sh  setup-build-env-windows.bat  setup-uvx-linux.sh  setup-uvx-macos.sh  setup-uvx-windows.ps1  update-gitleaks-rules.mjs
targets/vsc-extension/src/: api.ts  executableManager.ts  extension.ts  log.ts  types.ts  uninstall_hook.ts  userIdManager.ts  utils.test.ts  utils.ts  uvRunner.ts
(+37 files in other folders)
